# typescript-rs

./: Cargo.toml  README.md  dts_names.json  js_names.json
.devcontainers/: devcontainer.json
crates/typescript-linux-x86_64/: Cargo.toml
crates/typescript-linux-x86_64/src/: lib.rs
crates/typescript-sys/: Cargo.toml  README.md
crates/typescript-sys/examples/: _generate.rs
crates/typescript-sys/src/: fs.rs  lib.rs
crates/typescript-sys/src/rquickjs/: mod.rs  node_fs.rs
crates/typescript-windows-x86_64/: Cargo.toml
crates/typescript-windows-x86_64/src/: lib.rs
examples/: _generate.rs  a-minimal-compiler.rs  a-simple-transform-function.rs  task-generate.rs
src/: lib.rs  rt.rs
